3-Kubernetes-networking-for-vm/2-route-ingress/deny-all-networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: deny-all
spec:
   podSelector:
     ingress: []
